--- a/fron2/src/app/pages/home/home.component.scss
+++ b/fron2/src/app/pages/home/home.component.scss
@@ -1,3 +1,4 @@
+/*
 .home-container {
   text-align: center;
   margin-top: 2rem;
@@ -12,4 +13,7 @@
     cursor: pointer;
     margin-top: 1rem;
   }
+
+
 }
+*/
