--- a/fron2/src/app/components/clients-table/clients-table.component.html
+++ b/fron2/src/app/components/clients-table/clients-table.component.html
@@ -5,7 +5,6 @@
 
 <p-table [value]="tablas" [tableStyle]="{ 'min-width': '40rem' }" class="tabla-personalizada">
 
-  <!-- Cabecera principal -->
   <ng-template pTemplate="header">
     <tr class="encabezado-tabla">
       <th>Nombre</th>
@@ -14,7 +13,6 @@
     </tr>
   </ng-template>
 
-  <!-- Cuerpo principal -->
   <ng-template pTemplate="body" let-client>
     <tr class="fila-tabla">
       <td>{{ client.nombre }}</td>
@@ -32,15 +30,12 @@
       </td>
     </tr>
 
-    <!-- Fila expandida -->
     <tr *ngIf="client.expanded">
       <td colspan="3">
         <div class="detalle-expandido">
           <div class="d-flex flex-column gap-2">
 
-            <!-- Datos expandido -->
-            <div *ngIf="!client.editando">
-              <div><strong>ID:</strong> {{ client.id }}</div>
+            <div>
               <div><strong>DNI:</strong> {{ client.dni }}</div>
               <div><strong>Dirección:</strong> {{ client.direccion || 'N/A' }}</div>
               <div>
@@ -50,49 +45,10 @@
                 </ul>
                 <ng-template #noTel>No hay teléfonos</ng-template>
               </div>
-              <button pButton class="p-button-info p-button-sm mt-2" (click)="editarCliente(client)">
-                 <i class="pi pi-pencil"></i> <!-- Editar -->
+              <button pButton class="p-button-info p-button-sm mt-2"
+                      (click)="abrirModal(client)">
+                <i class="pi pi-pencil"></i> Editar
               </button>
-            </div>
-
-            <!-- Editando cliente-->
-            <div *ngIf="client.editando">
-              <div>
-                <label>Nombre</label>
-                <input pInputText [(ngModel)]="client.nombre"> <!--[(ngModel)] enlaza ,cambios input<->variable -->
-
-              </div>
-              <div>
-                <label>DNI</label>
-                <input pInputText [(ngModel)]="client.dni">
-              </div>
-              <div>
-                <label>Dirección</label>
-                <input pInputText [(ngModel)]="client.direccion">
-              </div>
-              <div>
-                <label>Teléfonos</label>
-                <div *ngFor="let t of client.telefonos; let i = index" class="d-flex gap-2 mb-2">
-                  <input type="text" [(ngModel)]="t.numero" placeholder="Número" pInputText>
-                  <select [(ngModel)]="t.type">
-                    <option value="mobile">Mobile</option>
-                    <option value="landline">Landline</option>
-                    <option value="office">Office</option>
-                  </select>
-                  <button type="button" pButton icon="pi pi-trash" class="p-button-danger p-button-sm"
-                          (click)="client.telefonos.splice(i, 1)"></button> `<!-- Elimina 1 teléfono del array en la posición i`-->
-
-                </div>
-                <button type="button" pButton class="p-button-success p-button-sm mt-2"
-                        (click)="client.telefonos.push({numero:'', type:'mobile'})">
-                  <i class="pi pi-plus"></i> Añadir Teléfono
-                </button>
-              </div>
-              <button type="button" pButton class="p-button-success mt-2"
-                      (click)="guardarCambios(client)">
-                Guardar cambios
-              </button>
-
             </div>
 
           </div>
@@ -101,11 +57,13 @@
     </tr>
   </ng-template>
 
-  <!-- Mensaje vacío -->
   <ng-template pTemplate="emptymessage">
     <tr>
       <td colspan="3">No hay clientes para mostrar.</td>
     </tr>
   </ng-template>
-
 </p-table>
+
+<p-dialog header="Editar Cliente" [(visible)]="displayEditDialog" [modal]="true" [style]="{width: '500px'}">
+  <app-edit-client [cliente]="clienteSeleccionado" (clienteActualizado)="actualizarCliente($event)"></app-edit-client>
+</p-dialog>
