--- a/fron2/src/app/components/consumo-table/consumo-table.component.html
+++ b/fron2/src/app/components/consumo-table/consumo-table.component.html
@@ -1,1 +1,57 @@
-<p>consumo-table works!</p>
+<div *ngIf="consumos.length > 0; else noData">
+  <p-table [value]="consumos" [tableStyle]="{ 'min-width': '30rem' }">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>ID</th>
+        <th>Año</th>
+        <th>Mes</th>
+        <th>Total mensual (€)</th>
+        <th>Eliminar</th>
+      </tr>
+    </ng-template>
+
+    <ng-template pTemplate="body" let-c>
+      <tr>
+        <td>{{ c.id }}</td>
+        <td>{{ c.anio }}</td>
+        <td>{{ c.mes }}</td>
+        <td>{{ c.total_mensual }}</td>
+        <td>
+          <button pButton class="p-button-danger p-button-sm" (click)="onDeleteConsumo(c.id)">
+            <i class="pi pi-trash"></i>
+          </button>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
+
+<ng-template #noData>
+  <p>No hay consumos registrados para este teléfono.</p>
+</ng-template>
+
+<hr>
+
+<h5>Añadir nuevo consumo</h5>
+<div [formGroup]="formNuevoConsumo" class="d-flex gap-2 align-items-center">
+  <p-dropdown [options]="meses" placeholder="Mes" formControlName="mes"></p-dropdown>
+  <input pInputText type="number" formControlName="anio" placeholder="Año">
+  <input pInputText type="number" formControlName="consumo" placeholder="Consumo (€)">
+
+  <button pButton type="button" class="p-button-success" (click)="agregarConsumo()">
+    <i class="pi pi-plus"></i> Añadir
+  </button>
+</div>
+
+<h5>Histórico de consumos</h5>
+<div class="d-flex gap-2 align-items-center mb-3">
+  <label>Año:</label>
+  <p-dropdown [options]="anios" [(ngModel)]="anioSeleccionado" placeholder="Selecciona un año">
+  </p-dropdown>
+</div>
+
+<app-telefono-chart
+  [consumos]="consumos"
+  [telefono]="telefonoSeleccionado.numero"
+  [anioSeleccionado]="anioSeleccionado">
+</app-telefono-chart>
