--- a/fron2/src/app/components/consumo-table/consumo-table.component.html
+++ b/fron2/src/app/components/consumo-table/consumo-table.component.html
@@ -33,11 +33,10 @@
 <hr>
 
 <h5>Añadir nuevo consumo</h5>
-<div [formGroup]="formNuevoConsumo" class="d-flex gap-2 align-items-center">
+<div [formGroup]="formNuevoConsumo" class="d-flex gap-2 align-items-center mb-3">
   <p-dropdown [options]="meses" placeholder="Mes" formControlName="mes"></p-dropdown>
   <input pInputText type="number" formControlName="anio" placeholder="Año">
   <input pInputText type="number" formControlName="consumo" placeholder="Consumo (€)">
-
   <button pButton type="button" class="p-button-success" (click)="agregarConsumo()">
     <i class="pi pi-plus"></i> Añadir
   </button>
@@ -50,8 +49,9 @@
   </p-dropdown>
 </div>
 
+<!-- Gráficos: ambos siempre visibles -->
 <app-telefono-chart
   [consumos]="consumos"
-  [telefono]="telefonoSeleccionado.numero"
+  [telefono]="telefonoSeleccionado?.numero"
   [anioSeleccionado]="anioSeleccionado">
 </app-telefono-chart>
