--- a/fron2/src/app/pages/home/home.component.html
+++ b/fron2/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
   <!-- Header con título y botón -->
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="page-title">Clientes</h1>
-    <button class="btn btn-success" (click)="openModal()">Nuevo Cliente</button>
+    <button class="p-button-success p-button-rounded p-button-outlined" (click)="openModal()">Nuevo Cliente</button>
   </div>
 
   <!-- Tabla de clientes dentro de un card -->
