me pongo con mail,pdf funciona sin graficas

--- a/fron2/src/app/components/consumo-table/consumo-table.component.html
+++ b/fron2/src/app/components/consumo-table/consumo-table.component.html
@@ -5,13 +5,13 @@
             (onChange)="onYearChange($event.value)">
   </p-select>
 
-  <!-- 🔽 Botón de exportar a PDF -->
+
   <button 
     pButton 
     type="button" 
     label="Exportar PDF" 
     icon="pi pi-file-pdf" 
-    class="p-button-danger p-button-raised p-button-sm"
+    class="p-button-help p-button-raised p-button-sm"
     (click)="generarPDF()">
   </button>
 </div>
