empezamos con reto 3

--- a/fron2/src/app/components/consumo-table/consumo-table.component.html
+++ b/fron2/src/app/components/consumo-table/consumo-table.component.html
@@ -12,7 +12,7 @@
     label="Ver PDF" 
     icon="pi pi-file-pdf" 
     class="p-button-help p-button-raised"
-    (click)="generarPDF()">
+    (click)="generarPDF(false)">
   </button>
 
   <button pButton 
