--- a/fron2/src/app/pages/home/home.component.html
+++ b/fron2/src/app/pages/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="home-container container mt-4">
 
+  <p-button label="Cerrar Sesión" icon="pi pi-sign-out" class="p-button-danger mb-3" (click)="logout()"></p-button>
+
   <!-- Header con título y botón -->
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="page-title">Clientes</h1>
