--- a/fron2/src/app/pages/home/home.component.html
+++ b/fron2/src/app/pages/home/home.component.html
@@ -11,7 +11,7 @@
   <!-- Tabla de clientes dentro de un card -->
   <div class="clients-table card shadow-sm mb-5">
     <div class="card-header bg-primary text-white">
-      <h5 class="mb-0">Lista de Clientes</h5>
+      <h5 class="mb-0"></h5>
     </div>
     <div class="card-body p-0">
       <app-clients-table [tablas]="tablas" class="p-datatable-striped p-datatable-hoverable"></app-clients-table>
